# diff_drive_mapping_robot

./: CMakeLists.txt  README.md  package.xml
keyboard_control/: .teleop_twist_keyboard.py.swp
launch/: bridge.launch
maze_robot/: CMakeLists.txt  package.xml
maze_robot/include/: Encoder.h
maze_robot/keyboard_control/: teleop_twist_keyboard
maze_robot/launch/: bridge.launch  camera.launch  robot.launch
maze_robot/motor_control/: motor_control.ino  motor_control.ino~
maze_robot/motor_control/Controller/: Controller.ino
maze_robot/motor_control/Encoder/: Encoder.cpp  Encoder.h  encoder_config.txt
maze_robot/msg/: PWM.msg
maze_robot/src/motor_control/: .motor_control.ino.swo  motor_control.ino
maze_robot/src/motor_control/Arduino/Controller/: Controller.ino
maze_robot/src/motor_control/Encoder/: Encoder.cpp  a.out  encoder_test.py  motor_vel_pub.cpp
maze_robot/src/motor_control/Encoder/CalibrateEncoders/: calculate_ticks_per_meter.py
maze_robot/src/motor_control/PI/testing/: encoder_test.cpp  motor_vel_pub.py
maze_robot/src/motor_control/Teensy/Controller/: Controller.ino
maze_robot/src/motor_control/Teensy/Encoder/: Encoder.cpp  Encoder.h
maze_robot/src/motor_control/Teensy/Encoder/CalibrateEncoders/: CalibrateEncoders.ino
maze_robot/src/motor_control/Teensy/Odometry/: Odometry.ino
maze_robot_v1_description/: CMakeLists.txt  package.xml
maze_robot_v1_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
maze_robot_v1_description/meshes/: base_link.stl  base_top_1.stl  iphone_8_1.stl  left_motor_1.stl  left_wheel_1.stl  main_holder_1.stl  right_motor_1.stl  right_wheel_1.stl  support_back_1.stl  support_front_1.stl
maze_robot_v1_description/urdf/: materials.xacro  maze_robot_v1.gazebo  maze_robot_v1.trans  maze_robot_v1.xacro
motor_control/: .motor_control.ino.swp
motor_control/DC_motor_test/: DC_motor_test.ino
msg/: MazeRobotState.msg
src/motor_control/: .motor_control.ino.swp
